Model controla los html y archivos estaticos. Version funcional de las vistas

--- a/APMwSc/presentation/access-control/role.html
+++ b/APMwSc/presentation/access-control/role.html
@@ -1,5 +1,5 @@
 {% extends "presentation/access-control/base.html" %}
 {%block contenido%}
-    <h1>Bienvenido a la página de control de usuarios</h1>
+    <h1>Bienvenido a la página de control de roles</h1>
     
 {%endblock%}
