--- a/APMwSc/presentation/access-control/dpt.html
+++ b/APMwSc/presentation/access-control/dpt.html
@@ -1,5 +1,5 @@
 {% extends "presentation/access-control/base.html" %}
 {%block contenido%}
-    <h1>Bienvenido a la página de control de usuarios</h1>
+    <h1>Bienvenido a la página de control de departamentos</h1>
     
 {%endblock%}
