Aplicaciones modulares con Blueprint funcionando en role y usuarios

--- a/APMwSc/presentation/access-control/user.html
+++ b/APMwSc/presentation/access-control/user.html
@@ -1,5 +1,4 @@
-{% extends "presentation/access-control/base.html" %}
+{% extends "/base.html" %}
 {%block contenido%}
     <h1>Bienvenido a la página de control de usuarios</h1>
-    
 {%endblock%}
