Comunicacion flask-angular js funcionando

--- a/APMwSc/presentation/access-control/dpt.html
+++ b/APMwSc/presentation/access-control/dpt.html
@@ -1,34 +1,49 @@
 {% extends "presentation/access-control/base.html" %}
 {%block contenido%}
     <script type="text/javascript">
-        $.postJSON = function(url, data, callback) {
-        return jQuery.ajax({
-            'type': 'POST',
-            'url': url,
-            'contentType': 'application/json',
-            'data': $.toJSON(data),
-            'dataType': 'json',
-            'success': callback
-        });
-        };
 
-        var app = angular.module('test', []);
+        var app = angular.module('inputs', []);
 
-        app.controller('test', function ($scope, $http) {
-            $scope.nombreDpt = "val 1 here";
+        app.controller("add", 
+            function($scope,$http,$location){
+                $scope.nombreDpt = "Nombre del dpto"
+                $scope.idDpt     = 5
 
-            $scope.enviar = function () {
-                alert('it should submit now, if it worked, you\'ll see some json');
+
+                $scope.enviar = function() {
+                    console.log(angular.toJson($scope.nombreDpt));
+                    var data = {}
+                    data["nombreDpt"] = $scope.nombreDpt;
+                    data["idDpt"]     = $scope.idDpt;
+                    
+                    console.log(angular.fromJson(data));
+
+                    $http.post("/dpt", angular.fromJson(data)).success(
+                        function(data){
+                            $scope.gists = data;
+
+                        }
+                    );
+
+                };
+
+                $scope.borrarT = function(){
+                    this.nombreDpt = ""
+                }                
+                $scope.borrarN = function(){
+                    this.idDpt = ""
+                }
             }
-        });
-
+            
+        );
 
     </script>
 
     <h1>Bienvenido a la página de control de departamentos</h1>
 
-    <form ng-app="test" ng-controller="test" action="/dpt/mostrar" method="get">
-        <input type="text" name="nombreDpt" ng-model="nombreDpt"/>
+    <form ng-app="inputs" ng-controller="add" method="get" >
+        <input type="text"   ng-mousedown="borrarT()" ng-model="nombreDpt"/>
+        <input type="number"   ng-mousedown="borrarN()" ng-model="idDpt"/>
         <input type="submit" ng-click="enviar()">
     </form>
 
