Arreglo de redireccion equivocada en user.html, encriptacion correcta en user.py y algunos comentarios

--- a/APMwSc/presentation/access-control/user.html
+++ b/APMwSc/presentation/access-control/user.html
@@ -29,7 +29,7 @@
                     
                     console.log(angular.fromJson(data));
 
-                    $http.post("/role", angular.fromJson(data)).success(
+                    $http.post("/user", angular.fromJson(data)).success(
                         function(data){
                             $scope.gists = data;
 
