Campo de nombre cambiado de numero a texto

--- a/APMwSc/presentation/access-control/user.html
+++ b/APMwSc/presentation/access-control/user.html
@@ -54,7 +54,7 @@
                 Nombre de usuario:
             </li>            
             <li class="elemento">
-                <input type="number" ng-model="username"/>
+                <input type="text" ng-model="username"/>
             </li>            
             <li class="elemento">
                 Password:
